RESOLVED FIXED79262
REGRESSION (r62632): page-break-inside: avoid is ignored
https://bugs.webkit.org/show_bug.cgi?id=79262
Summary REGRESSION (r62632): page-break-inside: avoid is ignored
mitz
Reported 2012-02-22 11:09:12 PST
REGRESSION (r62632): page-break-inside: avoid is ignored
Attachments
Re-enable page-break-inside: avoid (3.86 KB, patch)
2012-02-22 11:16 PST, mitz
adele: review+
mitz
Comment 1 2012-02-22 11:16:07 PST
Created attachment 128252 [details] Re-enable page-break-inside: avoid
Adele Peterson
Comment 2 2012-02-22 11:30:48 PST
Comment on attachment 128252 [details] Re-enable page-break-inside: avoid View in context: https://bugs.webkit.org/attachment.cgi?id=128252&action=review > Source/WebCore/ChangeLog:11 > + typo - intorudce -> introduce
mitz
Comment 3 2012-02-22 11:37:44 PST
Note You need to log in before you can comment on or make changes to this bug.